; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/lua/extr_lparser.c_forlist.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/lua/extr_lparser.c_forlist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { i32, %struct.TYPE_14__* }
%struct.TYPE_14__ = type { i32 }

@.str = private unnamed_addr constant [16 x i8] c"(for generator)\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"(for state)\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"(for control)\00", align 1
@TK_IN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_13__*, i32*)* @forlist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @forlist(%struct.TYPE_13__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_13__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_14__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.TYPE_13__* %0, %struct.TYPE_13__** %3, align 8
  store i32* %1, i32** %4, align 8
  %10 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %10, i32 0, i32 1
  %12 = load %struct.TYPE_14__*, %struct.TYPE_14__** %11, align 8
  store %struct.TYPE_14__* %12, %struct.TYPE_14__** %5, align 8
  store i32 0, i32* %7, align 4
  %13 = load %struct.TYPE_14__*, %struct.TYPE_14__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* %9, align 4
  %16 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %17 = load i32, i32* %7, align 4
  %18 = add nsw i32 %17, 1
  store i32 %18, i32* %7, align 4
  %19 = call i32 @new_localvarliteral(%struct.TYPE_13__* %16, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %17)
  %20 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %21 = load i32, i32* %7, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %7, align 4
  %23 = call i32 @new_localvarliteral(%struct.TYPE_13__* %20, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32 %21)
  %24 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %25 = load i32, i32* %7, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %7, align 4
  %27 = call i32 @new_localvarliteral(%struct.TYPE_13__* %24, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0), i32 %25)
  %28 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %29 = load i32*, i32** %4, align 8
  %30 = load i32, i32* %7, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %7, align 4
  %32 = call i32 @new_localvar(%struct.TYPE_13__* %28, i32* %29, i32 %30)
  br label %33

33:                                               ; preds = %37, %2
  %34 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %35 = call i64 @testnext(%struct.TYPE_13__* %34, i8 signext 44)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %44

37:                                               ; preds = %33
  %38 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %39 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %40 = call i32* @str_checkname(%struct.TYPE_13__* %39)
  %41 = load i32, i32* %7, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %7, align 4
  %43 = call i32 @new_localvar(%struct.TYPE_13__* %38, i32* %40, i32 %41)
  br label %33

44:                                               ; preds = %33
  %45 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %46 = load i32, i32* @TK_IN, align 4
  %47 = call i32 @checknext(%struct.TYPE_13__* %45, i32 %46)
  %48 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %49 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 8
  store i32 %50, i32* %8, align 4
  %51 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %52 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %53 = call i32 @explist1(%struct.TYPE_13__* %52, i32* %6)
  %54 = call i32 @adjust_assign(%struct.TYPE_13__* %51, i32 3, i32 %53, i32* %6)
  %55 = load %struct.TYPE_14__*, %struct.TYPE_14__** %5, align 8
  %56 = call i32 @luaK_checkstack(%struct.TYPE_14__* %55, i32 3)
  %57 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %58 = load i32, i32* %9, align 4
  %59 = load i32, i32* %8, align 4
  %60 = load i32, i32* %7, align 4
  %61 = sub nsw i32 %60, 3
  %62 = call i32 @forbody(%struct.TYPE_13__* %57, i32 %58, i32 %59, i32 %61, i32 0)
  ret void
}

declare dso_local i32 @new_localvarliteral(%struct.TYPE_13__*, i8*, i32) #1

declare dso_local i32 @new_localvar(%struct.TYPE_13__*, i32*, i32) #1

declare dso_local i64 @testnext(%struct.TYPE_13__*, i8 signext) #1

declare dso_local i32* @str_checkname(%struct.TYPE_13__*) #1

declare dso_local i32 @checknext(%struct.TYPE_13__*, i32) #1

declare dso_local i32 @adjust_assign(%struct.TYPE_13__*, i32, i32, i32*) #1

declare dso_local i32 @explist1(%struct.TYPE_13__*, i32*) #1

declare dso_local i32 @luaK_checkstack(%struct.TYPE_14__*, i32) #1

declare dso_local i32 @forbody(%struct.TYPE_13__*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
